--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,3 +1,8 @@
 FROM golang:1.10
 
+LABEL maintainer="bernd@brainlounge.de"
+
+COPY ./mockserver /usr/local/bin/
+
 EXPOSE 8080
+ENTRYPOINT /usr/local/bin/mockserver
