--- a/kubernetes/mock-pod.yaml
+++ b/kubernetes/mock-pod.yaml
@@ -16,8 +16,8 @@ spec:
           valueFrom:
             fieldRef:
               fieldPath: metadata.namespace
-        image: istioinaction/catalog:latest
-        imagePullPolicy: IfNotPresent
+        image: gcr.io/thelounge-lab/istiomock:latest
+        imagePullPolicy: Always
         livenessProbe:
           httpGet:
             path: /health
