--- a/kubernetes/mock-service-pod.yaml
+++ b/kubernetes/mock-service-pod.yaml
@@ -1,14 +1,32 @@
-apiVersion: extensions/v1beta1
+apiVersion: v1
+kind: Service
+metadata:
+  labels:
+    app: ${istiomock}
+  name: ${istiomock}
+spec:
+  ports:
+  - name: http
+    port: 8080
+    protocol: TCP
+    targetPort: 8080
+  selector:
+    app: ${istiomock}
+---    
+apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: istiomock
+  name: ${istiomock}-deployment
 spec:
   replicas: 1
   revisionHistoryLimit: 2
+  selector:
+    matchLabels:
+      app: ${istiomock}
   template:
     metadata:
       labels:
-        app: istiomock
+        app: ${istiomock}
     spec:
       containers:
       - env:
@@ -16,7 +34,7 @@ spec:
           valueFrom:
             fieldRef:
               fieldPath: metadata.namespace
-        image: gcr.io/thelounge-lab/istiomock:latest
+        image: brainlounge/servicemock
         imagePullPolicy: Always
         livenessProbe:
           httpGet:
