--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -2,4 +2,4 @@ steps:
 - name: 'gcr.io/cloud-builders/go'
   args: ['install', '.']
 - name: 'gcr.io/cloud-builders/go'
-  args: ['build', 'mockserver']
+  args: ['build', 'src/mockserver.go']
