--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,3 +1,6 @@
 steps:
 - name: 'gcr.io/cloud-builders/go'
   args: ['build', 'src/mockserver.go']
+steps:
+- name: 'gcr.io/cloud-builders/docker'
+  args: [ 'build', '-t', 'gcr.io/thelounge-lab/lounge', '.' ]
